Fri Feb  7 16:55:58 2003  Heather Drury  <drury_h@ociweb.com>

        * ace/config-aix-4.x.h: Reverted change to aix config file:

          Fri Feb  7 15:27:40 2003  Heather Drury  <drury_h@ociweb.com>

Fri Feb  7 15:37:19 2003  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Define DCCFLAGS with the
          debugging options for xlC_r; Change DCFLAGS to just -g (for the C
          compiler). Thanks to Trevor Fields <fields_t@ociweb.com> for
          reporting this problem.

Fri Feb  7 15:27:40 2003  Heather Drury  <drury_h@ociweb.com>

        * ace/config-aix-4.x.h: Restored the defining of
          ACE_TEMPLATES_REQUIRE_SOURCE for AIX VisualAge 5,
          which is needed for building TAO.  Thanks to Trevor
          Fields <fields_t@ociweb.com> for this fix.

Fri Feb  7 13:04:51 2003  Steve Huston  <shuston@riverace.com>

        * ace/ace_wchar.h: Added a new macro, ACE_TEXT_ALWAYS_WCHAR(STRING).
          It's the inverse of ACE_TEXT_ALWAYS_CHAR - whatever STRING is,
          the macro produces a wide-char string. Thanks to
          Emmanuel Thevenot Beaufort <emmanuel.thevenot-beaufort@jci.com>
          for this macro.

Thu Feb  6 19:30:18 2003  Steve Huston  <shuston@riverace.com>

        * tests/SString_Test.cpp: Added a test for wide-string compares of
          equal-length strings that differ in the last character.

        * ace/String_Base.i (compare): When memcmp()-ing to compare, take
          the size of CHAR into account when calculating byte length. Thanks
          to Emmanuel Thevenot Beaufort <emmanuel.thevenot-beaufort@jci.com>
          for this fix.

Thu Feb  6 16:06:29 2003  Rich Seibel <seibel_r@ociweb.com>

        * ace/config-tru64.h: Added a guard around the
          ACE_HAS_SNPRINTF as versions earlier than 5.0 do not seem
          have this function.

Thu Feb  6 15:03:04 2003  Krishnakumar B  <kitty@cs.wustl.edu>
